welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:6: error: type mismatch;
 found   : Boolean(false)
 required: Double
			return false; 
                               ^Program:4: error: type mismatch;
 found   : Unit
 required: Double
		for (pas <- 1 to nbPas) {
                         ^Program:9: error: type mismatch;
 found   : Unit
 required: Double
		recule();
                      ^