welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean): Double = {
	if (versLAvant) {
		for (pas <- 1 to nbPas) {
			avance();
			return false; 
		}
	} else {
		recule();
	}
}
